--- a/WebSudoku/_Imports.razor
+++ b/WebSudoku/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using WebSudoku
+@using WebSudoku.JsHelpers
 @using WebSudoku.Layout
 @using WebSudoku.Shared.Keys
