--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -1,6 +1,9 @@
 ﻿@page "/"
 @page "/rules"
 
+@inject IJSRuntime JS
+@inject NavigationManager Navigation
+
 <PageTitle>Web Sudoku - features and rules</PageTitle>
 
 <h1>Web Sudoku</h1>
@@ -53,3 +56,13 @@
         You start a game with a board where some of the cells have been assigned a digit that cannot be changed. Your should fill the board according to the rules.
     </li>
 </ul>
+
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+        if (Navigation.Uri != "/")
+        {
+            await JS.InvokeVoidAsync("redirect");
+        }
+    }
+}
