--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -56,3 +56,12 @@
         You start a game with a board where some of the cells have been assigned a digit that cannot be changed. Your should fill the board according to the rules.
     </li>
 </ul>
+
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+        var destination = await JS.InvokeAsync<string>("sessionStorage.getItem", "destination");
+        if (destination == null) return;
+        Navigation.NavigateTo(destination);
+    }
+}
