--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -61,6 +61,7 @@
     protected override async Task OnInitializedAsync()
     {
         var destination = await JS.InvokeAsync<string>("sessionStorage.getItem", "destination");
+        await JS.InvokeVoidAsync("sessionStorage.removeItem", "destination");
         if (destination == null) return;
         Navigation.NavigateTo("WebSudoku" + destination);
     }
