--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -63,6 +63,6 @@
         var destination = await JS.InvokeAsync<string>("sessionStorage.getItem", "destination");
         await JS.InvokeVoidAsync("sessionStorage.removeItem", "destination");
         if (destination == null) return;
-        Navigation.NavigateTo("WebSudoku" + destination);
+        Navigation.NavigateTo(destination.SubString(1));
     }
 }
