Update save and load to use single localStorage key-value pair
Add Saving and loading section to Index

Update loading logic keeping support for loading V1 save

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -17,6 +17,9 @@
 
 <ul>
     <li>
+        <strong class="text-decoration-underline">Saving and loading</strong>: Sudoku state can be saved and loaded.
+    </li>
+    <li>
         <strong class="text-decoration-underline">Printing</strong>: You can print the sudoku board with ability to adjust the following options:
         <ul>
             <li>
