Update border from medium to 4px

--- a/WebSudoku/Pages/Sudoku.razor.css
+++ b/WebSudoku/Pages/Sudoku.razor.css
@@ -3,7 +3,7 @@
 }
 
 .sudoku-table > tbody > tr:nth-child(3n) > td, .sudoku-table > tr:nth-child(3n) > td {
-    border-bottom: medium solid black !important;
+    border-bottom: 4px solid black !important;
 } 
 
 .sudoku-table > tbody > tr:last-child > td, .sudoku-table > tr:last-child > td {
@@ -11,7 +11,7 @@
 }
 
 .sudoku-table > tbody > tr > td:nth-child(3n), .sudoku-table > tr > td:nth-child(3n) {
-    border-right: medium solid black !important;
+    border-right: 4px solid black !important;
 }
 
 .sudoku-table > tbody > tr > td:last-child, .sudoku-table > tr > td:last-child {
