deploy: 7a6060da6be6ed69fffb7985b88fc304777eb8e8

--- a/WebSudoku.styles.css
+++ b/WebSudoku.styles.css
@@ -189,6 +189,8 @@ main[b-834vkyk4rs] {
     .div-options[b-245jprxzxn] {
         flex: 0 0 auto;
         width: 50%;
+        word-break: break-word;
+        word-wrap: break-word;
     }
 
     .flex-direction-var[b-245jprxzxn] {
