--- a/WebSudoku/Layout/NavMenu.razor
+++ b/WebSudoku/Layout/NavMenu.razor
@@ -11,18 +11,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rules" Match="NavLinkMatch.All">
-                <span class="oi oi-book" aria-hidden="true"></span> Sudoku Rules
+                Sudoku Rules
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sudoku">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Sudoku
+                Sudoku
             </NavLink>
+        </div>
+
+        <div class="bottom-0 nav-item px-3 hide-in-print">
+            <a class="text-decoration-underline nav-link" href="https://github.com/APB97/WebSudoku" target="_blank">Code</a>
         </div>
     </nav>
 </div>
