Adjust CSS for .div-options

--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -38,7 +38,7 @@
             </table>
         </div>
     
-        <div class="div-options hide-in-print" style="padding: 4px;">
+        <div class="div-options hide-in-print">
             <button class="btn btn-primary" @onclick="Save">Save</button>
             <button class="btn btn-primary" @onclick="Load">Load</button>
             <button class="btn btn-secondary" @onclick="() => InvalidCells = board.GetInvalidCells(Validator)">Show invalid cells</button>
