--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -11,6 +11,8 @@
 @inject NavigationManager Navigation
 @inject IJSRuntime JS
 
+@implements IAsyncDisposable
+
 <PageTitle>Web Sudoku - sudoku</PageTitle>
 
 @if (!success)
@@ -119,7 +121,7 @@ else
 
     private LocalStorage? localStorage;
 
-    private DotNetObjectReference<Sudoku>? thisComponentRef;
+    private IJSObjectReference? module;
 
     private bool isFirefox;
 
@@ -127,8 +129,7 @@ else
     {
         await base.OnInitializedAsync();
         localStorage = new LocalStorage(JS);
-        thisComponentRef = DotNetObjectReference.Create(this);
-        var module = await JS.InvokeAsync<IJSObjectReference>("import", "./Pages/Sudoku.razor.js");
+        module = await JS.InvokeAsync<IJSObjectReference>("import", "./Pages/Sudoku.razor.js");
         if (module != null)
         {
             isFirefox = await module.InvokeAsync<bool>("isFirefox");
@@ -192,11 +193,10 @@ else
             InvalidCells.Remove((row, column));
             InvalidCells.RemoveAll(cell => Validator.IsValid(board, cell));
         }
-        else if (args.Value is int number)
+        else if (args.Value is int number && number != board.GetValueAt((row, column)))
         {
             board.FillCell((row, column), number);
-            InvalidCells.RemoveAll(cell => Validator.IsValid(board, cell));
-            InvalidCells.AddRange(Validator.ConflictingCells(board, (row, column)));
+            InvalidCells = board.GetInvalidCells(Validator);
         }
 
         if (board.EmptyCells.Count == 0 && Validator.IsValidBoard(board))
@@ -228,5 +228,11 @@ else
     private async Task Focus(int row, int column)
     {
         await JS.InvokeVoidAsync("focusCell", row, column);
+    }
+
+    async ValueTask IAsyncDisposable.DisposeAsync()
+    {
+        if (module is null) return;
+        await module.DisposeAsync();
     }
 }
