Update Index.razor page
Remove manual button 'Show Invalid Cells'

--- a/WebSudoku/Pages/Index.razor
+++ b/WebSudoku/Pages/Index.razor
@@ -29,17 +29,17 @@
             </li>
             <li>
                 <b>Print highlighted errors</b> - if checked,
-                and given that You've used the <b>Show invalid cells</b> button to highlight conflicting cell values,
+                and given that there is active highlighting of conflicting cell values,
                 this option will include highlighting of errors in the printed version.
             </li>
         </ul>
     </li>
     <li>
-        <strong class="text-decoration-underline">Validation</strong>: You can use <b>Show invalid cells</b> button to highlight cell values conflicting with sudoku rules.
-        Highlight is cleared after leaving highlighted cell.
+        <strong class="text-decoration-underline">Validation</strong>: Any cell values conflicting with sudoku rules are highlighted automatically after changing cell's value.
     </li>
     <li>
         <strong class="text-decoration-underline">Navigation</strong>: You can navigate cells within the sudoku board using arrow keys.
+        Supports moving between the first and the last cell in a row or column.
         Target cell will have its value selected.
     </li>
 </ul>
