--- a/WebSudoku/Pages/Sudoku.razor
+++ b/WebSudoku/Pages/Sudoku.razor
@@ -228,7 +228,8 @@ else
 
     private async Task Focus(int row, int column)
     {
-        await JS.InvokeVoidAsync("focusCell", row, column);
+        if (module is null) return;
+        await module.InvokeVoidAsync("focusCell", row, column);
     }
 
     async ValueTask IAsyncDisposable.DisposeAsync()
